--- a/manifest.json
+++ b/manifest.json
@@ -39,7 +39,7 @@
         
     ],
     "lang" : "en-us",
-    "start_url": "/index.html",  
+    "start_url": "/pwa-travelnepal",  
     "display" :"standalone",
     "background_color": "white",
     "theme_color":"#3aafa9"
